fix: horizontal overflow on mobile devices

--- a/src/main.css
+++ b/src/main.css
@@ -97,6 +97,7 @@
 
 .content-wrapper {
   transition: background-color .25s;
+  overflow-x: hidden;
 }
 
 ::-moz-selection { 
